--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,15 @@ body {
   color: #333;
 }
 
+.touch {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
 canvas.snake {
   image-rendering: pixelated;
   height: 200px;
