--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,16 +1,34 @@
+@font-face {
+  font-family: '5x5 Pixel';
+  src: url('../fonts/5x5_pixel.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/5x5_pixel.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/5x5_pixel.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/5x5_pixel.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/5x5_pixel.svg#aabcd2513bcaccfd831c4258ab0fffa9') format('svg'); /* Legacy iOS */
+
+  font-style:   normal;
+  font-weight:  400;
+}
+
 body {
   background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "5x5 Pixel", sans-serif;
   color: #333;
 }
 
 .touch {
   position: absolute;
-  top: 0;
+  top: 2em;
   right: 0;
   left: 0;
   bottom: 0;
   overflow: hidden;
+}
+
+.username {
+  margin: 1em;
+  width: 5em;
+  text-transform: uppercase;
 }
 
 canvas.snake {
@@ -18,4 +36,13 @@ canvas.snake {
   height: 400px;
   width: 400px;
   border: 1px solid black;
+  margin-top: 2em;
+}
+
+.leaderboard {
+  font-size: 10VW;
+}
+
+.leaderboard td {
+  padding: 0.2em;
 }
